--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "typescript": "^5"
+    "typescript": "^5",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
   }
